# haskell

./: .bumpversion.cfg  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  LICENSE  Makefile  NOTE  README.md  cabal.project  cabal.project.freeze  dockeer-compose.yml  haskell.cabal  haskell.nix  my-haskell-lib.cabal  stack.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-ci.yml  github-ci.yml  haskell-ci.yml
5/merge/: Library.html  doc-index.html  haskell.haddock  index.html
5/merge/src/: Library.html
app/: Main.hs  Server.hs
docs/: _config.yml  index.md
src/: Library.hs  MyLib.hs
test/: LibrarySpec.hs  ServerSpec.hs  Spec.hs
