cabal-version: 3.8

name:                haskell
version:             0.0.1.3
synopsis:            A Haskell project with a library, server, and tests
description:         A Haskell project that includes a library, an executable server, and unit/integration tests.
license:             MIT
build-type:          Simple

source-repository head
  type:              git
  location:          https://github.com/lmrco/haskell

common common
  default-language: GHC2021

library
  import:           common
  hs-source-dirs:   src
  exposed-modules:
    Library
  build-depends:
      base

executable haskell-server
  import:           common
  main-is:          Server.hs
  hs-source-dirs:   app
  build-depends:
      aeson
    , base
    , containers
    , haskell
    , http-types
    , lens
    , scotty
    , text
    , warp
    , wreq

test-suite haskell-unit-tests
  import:           common
  type:             exitcode-stdio-1.0
  main-is:          LibrarySpec.hs
  hs-source-dirs:   test
  build-depends:
      QuickCheck
    , base
    , haskell
    , hspec
    , tasty
    , tasty-ant-xml
    , tasty-hspec

test-suite haskell-integration-tests
  import:           common
  type:             exitcode-stdio-1.0
  main-is:          ServerSpec.hs
  hs-source-dirs:   test
  build-depends:
      QuickCheck
    , aeson
    , async
    , base
    , bytestring
    , containers
    , haskell
    , hspec
    , hspec
    , http-client
    , http-types
    , lens
    , lens-aeson
    , network
    , process
    , tasty
    , tasty
    , tasty-ant-xml
    , tasty-hspec
    , tasty-hspec
    , text
    , wai
    , warp
    , wreq