cabal-version: 3.0
name:          haskell
version:       0.0.1.2
license:       MIT
license-file:  LICENSE
author:        Luca Marrocco
build-type:    Simple
tested-with:   GHC==8.10.7

-- ========================
-- 📚 Library
-- ========================

library
  exposed-modules:  Library
  hs-source-dirs:   src
  build-depends:    base
  default-language: Haskell2010

-- ========================
-- 🧪 Unit Tests
-- ========================

test-suite haskell-unit-tests
  type:             exitcode-stdio-1.0
  main-is:          LibrarySpec.hs
  hs-source-dirs:   test
  build-depends:
    , QuickCheck
    , base
    , haskell
    , hspec
    , tasty
    , tasty-ant-xml
    , tasty-hspec
  default-language: Haskell2010

-- ========================
-- 🚀 Executable Server
-- ========================

executable haskell-server
  main-is:          Server.hs
  hs-source-dirs:   app
  build-depends:
    , aeson
    , base
    , cardano-api
    , containers
    , haskell
    , http-types
    , lens
    , scotty
    , text
    , warp
    , wreq
  default-language: Haskell2010

-- ========================
-- 🧪 Integration Tests
-- ========================

test-suite haskell-integration-tests
  type:             exitcode-stdio-1.0
  main-is:          ServerSpec.hs
  hs-source-dirs:   test
  build-depends:
    , QuickCheck
    , aeson
    , async
    , base
    , bytestring
    , containers
    , haskell
    , hspec
    , hspec
    , http-client
    , http-types
    , lens
    , lens-aeson
    , network
    , process
    , tasty
    , tasty
    , tasty-ant-xml
    , tasty-hspec
    , tasty-hspec
    , text
    , wai
    , warp
    , wreq
  default-language: Haskell2010
