cabal-version:       3.0
name:                my-haskell-lib
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              You
build-type:          Simple

library
  exposed-modules:     MyLib
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

test-suite my-haskell-lib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <5
                     , my-haskell-lib
                     , hspec
                     , tasty
                     , tasty-hspec
                     , tasty-ant-xml
                     , QuickCheck
  default-language:    Haskell2010
